--- a/ToDoListMVC/Views/Tasks/Index.cshtml
+++ b/ToDoListMVC/Views/Tasks/Index.cshtml
@@ -2,29 +2,140 @@
 
 <html>
 <head>
-    <title>ToDo List</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<title>ToDo List</title>
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 </head>
-<body style="">
-    <form asp-action="Create" method="post">
-        <div style="text-align: center;">
-            <h3>ToDo list</h3>
-            <div>
-                <b>Enter your task: </b>
-                <input type="text" name="CreateTaskViewModel.Name" id="CreateTaskViewModel.Name" placeholder="Input your task" />
-                <input type="datetime-local" name="CreateTaskViewModel.DueDate" id="CreateTaskViewModel.DueDate" />
-                <select asp-for="CreateTaskViewModel.CategoryId">
-                    @foreach (var item in Model.Categories)
-                    {
-                        <option value="@item.Id">@item.Name</option>
-                    }
-                </select>
-                <input type="submit" value="Add" class="btn btn-success" />
-            </div>
-            <div>
-                <span asp-validation-for="CreateTaskViewModel.Name"></span>
-            </div>
-        </div>
-    </form>
+<body style="margin: 20px; font-family:Oswald; font-size: 18px; background-color:#2c3034;" width:1000px>
+	<h3 style="padding: 20px; color: white">ToDo list</h3>
+	<table class="table table-dark table-striped table-bordered table-hover" style="max-width: 975px;">
+		<tr>
+			<td colspan="6">
+				<form asp-action="Create" class=" text-center">
+					<div class="input-group">
+						<input type="text" asp-for="CreateTaskViewModel.Name" placeholder="Enter your task"
+		  style="width:580px; border-top-left-radius:10px; border-bottom-left-radius:10px" ; />
+						<input type="datetime-local" asp-for="CreateTaskViewModel.DueDate" />
+						<select asp-for="CreateTaskViewModel.CategoryId">
+							<option value="@null">No category</option>
+							@foreach (var item in Model.Categories)
+							{
+								<option value="@item.Id">@item.Name</option>
+							}
+						</select>
+						<input type="submit" value="Add" class="btn btn-success"
+							   style="border-top-right-radius:10px; border-bottom-right-radius:10px" />
+					</div>
+				</form>
+			</td>
+		</tr>
+		<tr class="text-center">
+			<td><b>Status</b></td>
+			<td><b>Category</b></td>
+			<td><b>Task</b></td>
+			<td><b>Due date</b></td>
+			<td colspan="2"><b>Manage</b></td>
+		</tr>
+		<tr class="text-center">
+			<td colspan="6"><b>Tasks in process</b></td>
+		</tr>
+		@foreach (var item in Model.UncompletedTasks)
+		{
+			<tr>
+				<td>
+					<form asp-action="TaskIsDone" class="text-center">
+						<input type="text" hidden value="@item.Id" name="Id" />
+						<input type="submit" asp-action="TaskIsDone" value="Done" class="btn btn-primary" style="width:65px">
+					</form>
+				</td>
+				<td>
+					@if (item.CategoryId == null)
+					{
+						<a>No category</a>
+					}
+					else
+					{
+						foreach (var category in Model.Categories)
+						{
+							if (category.Id == item.CategoryId)
+							{
+								<a>@category.Name</a>
+							}
+						}
+					}
+				</td>
+				<td>
+					<a>@item.Name</a>
+				</td>
+				<td style="text-align:right">
+					@if (item.DueDate == null)
+					{
+						<a>No due date</a>
+					}
+					else
+					{
+						<p>@item.DueDate</p>
+					}
+				</td>
+				<td class="text-center">
+					<form asp-action="Edit" method="get">
+						<input type="text" hidden value="@item.Id" name="Id"/>
+						<input type='submit' onclick="return confirm ('Are you sure you want to edit this task(@item.Name)?');" class="btn btn-sm btn-secondary" style="color: white" value="Edit"/>
+					</form>
+				</td>
+				<td class="text-center">
+					<form asp-action="Delete">
+						<input type="text" hidden value="@item.Id" name="Id" />
+						<input type="submit" onclick="return confirm ('Are you sure you want to delete this task(@item.Name)?');"
+							   class="btn btn-sm btn-danger" value="Delete" style="color: white" />
+					</form>
+				</td>
+			</tr>
+		}
+		<tr class="text-center">
+			<td colspan="6"><b>Completed tasks</b></td>
+		</tr>
+		@foreach (var item in Model.CompletedTasks)
+		{
+			<tr>
+				<td class="text-center">
+					<input type="submit" asp-action="TaskIsDone" value="Done!" class="btn btn-primary" disabled style="width:65px">
+				</td>
+				<td>
+					@if (item.CategoryId == null)
+					{
+						<a>No category</a>
+					}
+					else
+					{
+						foreach (var category in Model.Categories)
+						{
+							if (category.Id == item.CategoryId)
+							{
+								<a>@category.Name</a>
+							}
+						}
+					}
+				</td>
+				<td>
+					<a style="text-decoration:line-through">@item.Name</a>
+				</td>
+				<td style="text-align:right">
+					@item.DueDate
+				</td>
+				<td class="text-center" colspan="2">
+					<form asp-action="Delete">
+						<input type="text" hidden value="@item.Id" name="Id" />
+						<input type="submit" onclick="return confirm ('Are you sure you want to delete this task(@item.Name)?');"
+							   class="btn btn-sm btn-danger" value="Delete" style="color: white" />
+					</form>
+				</td>
+			</tr>
+		}
+	</table>
+	<div>
+		<span asp-validation-for="CreateTaskViewModel.Name"></span>
+	</div>
 </body>
 </html>
