--- a/ToDoListMVC/Views/Tasks/Index.cshtml
+++ b/ToDoListMVC/Views/Tasks/Index.cshtml
@@ -26,7 +26,7 @@
 						</select>
 						<input type="submit" value="Add" class="btn btn-success"
 							   style="border-top-right-radius:10px; border-bottom-right-radius:10px" />
-						<span asp-validation-for="CreateTaskViewModel.Name"></span>
+						<span style="color: red" asp-validation-for="CreateTaskViewModel.Name"></span>
 					</div>
 				</form>
 			</td>
