--- a/ToDoListMVC/Views/Tasks/Index.cshtml
+++ b/ToDoListMVC/Views/Tasks/Index.cshtml
@@ -128,12 +128,15 @@
 				<td class="text-center" colspan="2">
 					<form asp-action="Delete">
 						<input type="text" hidden value="@item.Id" name="Id" />
-						<input type="submit" onclick="return confirm ('Are you sure you want to delete this task(@item.Name)?');"
+						<input type="submit" onclick="return confirm ('Are you sure you want to delete this task(@item.Name)?')"
 							   class="btn btn-sm btn-danger" value="Delete" style="color: white" />
 					</form>
 				</td>
 			</tr>
 		}
 	</table>
+	<form asp-action="ChangeDataType">
+		<input type="submit" onclick="return confirm ('Are you sure you want to change data type?')" class="btn btn-sm btn-danger" value="Change data type" style="color: white" />
+	</form>
 </body>
 </html>
