Final xml commit

--- a/ToDoListMVC/Views/Tasks/Index.cshtml
+++ b/ToDoListMVC/Views/Tasks/Index.cshtml
@@ -136,7 +136,7 @@
 		}
 	</table>
 	<form asp-action="ChangeDataType">
-		<input type="submit" onclick="return confirm ('Are you sure you want to change data type?')" class="btn btn-sm btn-danger" value="Change data type" style="color: white" />
+		<input type="submit" onclick="return confirm ('Are you sure you want to change data type?')" class="btn btn-sm btn-danger" value="Change data type (current - @DataStorage.StorageType)" style="color: white" />
 	</form>
 </body>
 </html>
