--- a/ToDoListMVC/Views/Tasks/Index.cshtml
+++ b/ToDoListMVC/Views/Tasks/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model TasksIndexViewModel
+﻿@using ToDoListMVC.Enums;
+@model TasksIndexViewModel
 
 <html>
 <head>
@@ -8,7 +9,26 @@
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 </head>
 <body style="margin: 20px; font-family:Oswald; font-size: 18px; background-color:#2c3034;" width:1000px>
-	<h3 style="padding: 20px; color: white">ToDo list</h3>
+	<header>
+		<form asp-action="ChangeDataType">
+			<div class="input-group">
+				<select asp-for="@DataStorage.StorageType">
+					@if (DataStorage.StorageType == StorageTypes.SQL)
+					{
+						<option value="@StorageTypes.SQL">@StorageTypes.SQL</option>
+						<option value="@StorageTypes.XML">@StorageTypes.XML</option>
+					}
+					else
+					{
+						<option value="@StorageTypes.XML">@StorageTypes.XML</option>
+						<option value="@StorageTypes.SQL">@StorageTypes.SQL</option>
+					}
+				</select>
+				<input type="submit" onclick="return confirm ('Are you sure you want to change data type?')" class="btn btn-success" value="Change data type" style="color: white" />
+			</div>
+		</form>
+	</header>
+	<h3 style="padding: 20px; color: white; " >ToDo list</h3>
 	<table class="table table-dark table-striped table-bordered table-hover" style="max-width: 975px;">
 		<tr>
 			<td colspan="6">
@@ -41,7 +61,7 @@
 		<tr class="text-center">
 			<td colspan="6"><b>Tasks in process</b></td>
 		</tr>
-		@foreach (var item in Model.ToDos.Where(t=>!t.Status))
+		@foreach (var item in Model.ToDos.Where(t => !t.Status))
 		{
 			<tr>
 				<td>
@@ -135,8 +155,5 @@
 			</tr>
 		}
 	</table>
-	<form asp-action="ChangeDataType">
-		<input type="submit" onclick="return confirm ('Are you sure you want to change data type?')" class="btn btn-sm btn-danger" value="Change data type (current - @DataStorage.StorageType)" style="color: white" />
-	</form>
 </body>
 </html>
